# IntuitivePeripheralDecodingRestoresHandControlAfterChildhoodHemispherotomy

./: .gitignore  .zenodo.json  CITATION.cff  LICENSE  README.md  pyproject.toml
figure-three/three-b-c/: figure_three-b-c.py
figure-two/two-b-c-d/: figure_two-b-c-d.py
figure-two/two-e/: 01_labeler.py  02_dataset_creation.py  03_feature_extraction.py  04_classification.py  05_visualize_predictions.py  06_supplementary_figure.py  _cv.py  _pipeline.py
